# file-handler-task

project/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake  file.txt  gtest.cpp  run_logs.txt
project/file_handler/: Makefile  cmake_install.cmake  fh  fh.cpp
project/logger/: CMakeLists.txt  Makefile  cmake_install.cmake  simpleLogger.cpp  simpleLogger.h
project/request/: Makefile  cmake_install.cmake  request  request.cpp
